# aws-iot-core-app

./: Dockerfile  GreengrassComponentRecipe.json  README.md  pyproject.toml  requirements.txt  run.py  test.py
app/: main.py  mqtt.py
